changed header to flexbox

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
+        <div id="header">
             <h1>Kaplan GED Live Schedule</h1>
             <div id="timer">
                 <div id="session-status">Next session in</div>
